--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "node-handbook-learning",
   "author": "Manuel Dorante",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "minimist": "^1.2.5"
   },
   "engines": {
     "node": "^12.19.0"
